[package]
name = "woomer"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grim-rs = "0.1.6"
hyprland = "0.4.0-beta.3"
image = "0.25.10"
raylib = { version = "5.0.1", features = ["wayland", "opengl_33"] }
[features]
dev = []

